02-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aci-helloworld
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aci-helloworld-app
