03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aci-helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: containers-k8s-demo.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aci-helloworld
            port:
              number: 80
